Fix dark mode, and add links to newsletter and Discord. Fix up some text too.

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -22,13 +22,14 @@
 }
 
 .exclaim {
-    color: #2663DF;
+    color: var(--ifm-color-primary);
 }
 
 .subtitle {
     line-height: 1.4;
     font-size: 24px;
-    color: #45464f;
+    color: var(--catalyst-text-alt);
+    margin-bottom: 36px;
 }
 
 .ctas {
@@ -36,10 +37,9 @@
 }
 
 .mainCta {
-    margin-top: 24px;
-    padding: 12px 18px;
+    padding: 6px 18px;
     border-radius: 12px;
-    background-color: #2663DF;
+    background-color: var(--ifm-color-primary);
     font-size: 24px;
     text-decoration: none;
     display: inline-block;
@@ -91,6 +91,10 @@
     padding: 72px;
 }
 
+[data-theme="dark"] .detailsContainer {
+    background: #49454F;
+}
+
 .details {
     margin: 0 auto;
     box-sizing: border-box;
@@ -106,19 +110,18 @@
     box-sizing: border-box;
     padding: 24px;
     border-radius: 8px;
-    background-color: #fefbff;
+    background-color: var(--catalyst-card-color);
     display: flex;
     align-items: center;
 }
 
 .details:not(:hover) .firstCard,
 .card:hover {
-    background-color: #faf8ff;
-    outline: 2px solid #487ce4;
+    outline: 2px solid var(--ifm-color-primary-lighter);
 }
 
 .card h2 {
-    color: #2663DF;
+    color: var(--ifm-color-primary);
     font-size: 18px;
     margin: 0 0 12px;
 }
@@ -182,7 +185,7 @@
 }
 
 .bottomCtaContainer {
-    padding: 72px 0 72px;
+    padding: 72px 0 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -216,7 +219,7 @@
     padding: 24px 12px;
     box-sizing: border-box;
     border-radius: 8px;
-    border: 1px solid #487ce4;
+    border: 1px solid var(--ifm-color-primary-lighter);
 }
 
 @media (max-width: 750px) {
@@ -227,15 +230,14 @@
 }
 
 .bottomCtas {
-    margin-top: 24px;
+    margin-top: 12px;
 }
 
 .bottomCta {
-    padding: 12px 18px;
+    padding: 6px 18px;
     border-radius: 12px;
-    background-color: #2663DF;
+    background-color: var(--ifm-color-primary);
     font-size: 24px;
-    text-decoration: none;
     display: inline-block;
 }
 
@@ -243,6 +245,7 @@
 .bottomCta:link,
 .bottomCta:visited {
     color: #fefbff;
+    text-decoration: none;
 }
 
 .bottomDocs {
@@ -251,8 +254,14 @@
     display: inline-block;
 }
 
+.lastDitchLinks {
+    margin-top: 12px;
+    font-size: 14px;
+    color: var(--catalyst-text-alt);
+}
+
 .demoContainer {
-    margin-top: 72px;
+    margin: 124px 0;
     max-width: 100vw;
     width: 1000px;
 }
